# Frank

./: .gitignore  LICENSE  README.md
feb16/: variations.tex
jan14/: Check.lhs  Eval.lhs  Gubbins.lhs  Tm.lhs  Ty.lhs
may14/: syntax.txt  types.tex
old/: Check.lhs  Elab.lhs  ElabMonad.lhs  Frank.cabal  Gubbins.lhs  LICENCE  Main.lhs  Pa.lhs  Run.lhs  Syntax.lhs  TFM.tex  Template.lhs  Types.lhs  Unify.lhs  Yuck.lhs  eh.fk  eh.txt  fun.fk  general.fk  hello.fk  hope.fk  hope.txt  index.html  keylog.fk  myterm  pp.fk  test.fk  ty.tex
src/: Check.lhs  Elab.lhs  ElabMonad.lhs  Run.lhs  Syntax.lhs  Types.lhs  Unify.lhs  test.fk
